<resources>
    <string name="app_name" translatable="false">Mediaseb</string>
    <string name="contact_mail" translatable="false">mediaseb.app@gmail.com</string>
    <string name="hint">Rechercher dans le catalogue</string>
    <string name="news">Nouveautés</string>
    <string name="account">Compte</string>
    <string name="loans">Prêts</string>
    <string name="empty_results">Pas de résultats</string>
    <string name="network_error">Erreur réseau</string>
    <string name="available">Disponible</string>
    <string name="title_activity_login">S\'identifier</string>
    <string name="no_result">Pas de résultat</string>
    <string name="no_loans">Pas d\'articles</string>

    <!-- Strings related to login -->
    <string name="prompt_name">Nom</string>
    <string name="prompt_card_number">N° carte (14 chiffres)</string>
    <string name="action_sign_in">Se connecter</string>
    <string name="action_sign_in_short">Se connecter</string>
    <string name="error_invalid_name">Ce nom n\'est pas correct</string>
    <string name="error_invalid_card_number">Ce numéro de carte est trop court</string>
    <string name="error_incorrect_card_number">Ce numéro de carte est incorrecte</string>
    <string name="error_field_required">Ce champ est requis</string>
    <string name="error_one_account_allowed">Seul un compte est authorisé</string>
    <string name="reload_page">Recharger la page</string>
    <string name="error_ids">"Identifiants incorrects"</string>

    <!-- Layouts -->
    <string name="media_image_description">Image du media</string>
    <string name="details_extras">Détails</string>
    <string name="details_collection">Collection :</string>
    <string name="details_type">Support :</string>
    <string name="details_section">Section :</string>
    <string name="details_location">Localisation :</string>
    <string name="details_rating">Cote :</string>

    <string name="account_not_logged_text">Vous n\'êtes pas connecté</string>
    <string name="account_loans">Prêts</string>
    <string name="account_reservations">Réservations</string>
    <string name="account_available_reservations">Réservations disponibles</string>
    <string name="account_details">Détails</string>

    <string name="menu_search">Rechercher</string>
    <string name="menu_log_in">Se connecter</string>
    <string name="menu_log_out">Se déconnecter</string>
    <string name="menu_contact">Contact</string>

    <!-- Transitions -->
    <string name="transition_name_image" translatable="false">image</string>
    <string name="transition_name_toolbar" translatable="false">toolbar</string>
    <string name="transition_name_tablayout" translatable="false">tablayout</string>
    <string name="transition_name_viewpager" translatable="false">viewpager</string>

    <!-- Permissions -->
    <string name="permission_required_toast">Cette permission est indispensable pour cette application.</string>
    <string name="permission_get_accounts_needed">Authorisation nécessaire</string>
    <string name="permission_get_accounts_rationale">Une authorisation est nécessaire afin de pouvoir accéder à votre compte.</string>
    <string name="permission_get_accounts_denied">Vous ne pourrez pas accéder à votre compte.</string>
</resources>
