<?xml version="1.0" encoding="utf-8"?>
<ViewFlipper xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/loan_view_flipper"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Content layout -->
    <android.support.v7.widget.RecyclerView
        android:id="@+id/loan_list_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadeScrollbars="true"
        android:scrollbars="vertical" />

    <!-- Loading layout -->
    <LinearLayout
        android:id="@+id/loan_list_progress_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <ProgressBar
            android:id="@+id/loan_list_progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </LinearLayout>

    <!-- Error layout -->
    <LinearLayout
        android:id="@+id/loan_list_error_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical|center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/loan_list_error"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_gravity="center"
            android:contentDescription="@string/network_error"
            android:src="@drawable/ic_error_outline_white"
            android:tint="@color/colorAccent" />

        <TextView
            android:id="@+id/loan_list_error_message"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:gravity="center"
            android:text="@string/network_error"
            android:textSize="16sp" />

        <Button
            android:id="@+id/loan_list_error_reload_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reload_page" />
    </LinearLayout>

    <!-- No content layout -->
    <LinearLayout
        android:id="@+id/loan_list_no_content_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical|center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/no_content_message"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:gravity="center"
            android:text="@string/no_loans"
            android:textSize="20sp" />
    </LinearLayout>

</ViewFlipper>